--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body class="page">
     <!-- Header section -->
-
+ 
     <header class="page-header">
       <div class="flexy container">
         <a href="./index.html" class="logo">Web<span class="logo-2nd-part">Studio</span></a>
