--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="./dist/css/main.min.css" />
   </head>
   <body class="page">
     <!-- Header section -->
- 
+
     <header class="page-header">
       <div class="flexy container">
         <a href="./index.html" class="logo">Web<span class="logo-2nd-part">Studio</span></a>
         <nav class="navigation">
           <ul class="site-nav list">
-            <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--current">Студия</a></li>
+            <li class="site-nav__item">
+              <a href="./index.html" class="site-nav__link site-nav__link--current">Студия</a>
+            </li>
             <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link">Портфолио</a></li>
             <li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
           </ul>
@@ -64,19 +66,25 @@
         <div class="container">
           <h2 class="principles__title visually-hidden">Наши принципы</h2>
           <ul class="principe list flexy">
-            <li class="principe__item sputnik">
+            <li class="principe__item principe__item--mright principe__item--sputnic">
               <h3 class="principe__title">Внимание к деталям</h3>
-              <p class="principe__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+              <p class="principe__text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
             </li>
-            <li class="principe__item clock">
+            <li class="principe__item principe__item--mright principe__item--clock">
               <h3 class="principe__title">Пунктуальность</h3>
-              <p class="principe__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+              <p class="principe__text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
             </li>
-            <li class="principe__item pc">
+            <li class="principe__item principe__item--mright principe__item--pc">
               <h3 class="principe__title">Планирование</h3>
-              <p class="principe__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+              <p class="principe__text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
             </li>
-            <li class="principe__item cosmonaut">
+            <li class="principe__item principe__item--cosmonaut">
               <h3 class="principe__title">Современные технологии</h3>
               <p class="principe__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
@@ -121,7 +129,7 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team-list list flexy">
             <li class="team-list__item team-list__item--mright">
-              <img class="team-list__image" src="./images/worker1.jpg"  alt="Product Designer" width="270" />
+              <img class="team-list__image" src="./images/worker1.jpg" alt="Product Designer" width="270" />
               <h3 class="team-list__title">Игорь Демьяненко</h3>
               <p class="team-list__text">Product Designer</p>
               <ul class="team-socials-list list">
@@ -376,7 +384,11 @@
           <a href="./index.html" class="footer-address__logo">Web <span class="footer-logo-2nd-part">studio</span></a>
           <p class="footer-address__text">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="footer-address__list list">
-            <li><a href="mailto:info@example.com" class="footer-address__item footer-address__item--mbottom">info@example.com</a></li>
+            <li>
+              <a href="mailto:info@example.com" class="footer-address__item footer-address__item--mbottom"
+                >info@example.com</a
+              >
+            </li>
             <li><a href="tel:+380991111111" class="footer-address__item">+38 099 111 11 11</a></li>
           </ul>
         </address>
