--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./dist/css/portfolio.min.css" />
   </head>
   <body class="portfolio-page">
     <!-- Header section -->
@@ -25,7 +25,9 @@
         <nav class="navigation">
           <ul class="site-nav list">
             <li class="site-nav__item"><a href="./index.html" class="site-nav__link">Студия</a></li>
-            <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link site-nav__link--current">Портфолио</a></li>
+            <li class="site-nav__item">
+              <a href="./portfolio.html" class="site-nav__link site-nav__link--current">Портфолио</a>
+            </li>
             <li class="site-nav__item"><a href="" class="site-nav__link">Контакты</a></li>
           </ul>
         </nav>
@@ -49,7 +51,6 @@
         </ul>
       </div>
     </header>
-
 
     <!-- Main section -->
 
@@ -75,8 +76,8 @@
                     <img class="project-list__img" src="./images/project1.jpg" alt="project1" width="370" />
                     <div class="project-list__txt">
                       <p>
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
-                        для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                       </p>
                     </div>
                   </div>
@@ -92,8 +93,8 @@
                     <img class="project-list__img" src="./images/project2.jpg" alt="project2" width="370" />
                     <div class="project-list__txt">
                       <p>
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
-                        для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                       </p>
                     </div>
                   </div>
@@ -109,8 +110,8 @@
                     <img class="project-list__img" src="./images/project3.jpg" alt="project3" width="370" />
                     <div class="project-list__txt">
                       <p>
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
-                        для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                       </p>
                     </div>
                   </div>
@@ -126,8 +127,8 @@
                     <img class="project-list__img" src="./images/project4.jpg" alt="project4" width="370" />
                     <div class="project-list__txt">
                       <p>
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
-                        для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                       </p>
                     </div>
                   </div>
@@ -143,8 +144,8 @@
                     <img class="project-list__img" src="./images/project5.jpg" alt="project5" width="370" />
                     <div class="project-list__txt">
                       <p>
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
-                        для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                       </p>
                     </div>
                   </div>
@@ -160,8 +161,8 @@
                     <img class="project-list__img" src="./images/project6.jpg" alt="project6" width="370" />
                     <div class="project-list__txt">
                       <p>
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
-                        для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                       </p>
                     </div>
                   </div>
@@ -177,8 +178,8 @@
                     <img class="project-list__img" src="./images/project7.jpg" alt="project7" width="370" />
                     <div class="project-list__txt">
                       <p>
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
-                        для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                       </p>
                     </div>
                   </div>
@@ -194,8 +195,8 @@
                     <img class="project-list__img" src="./images/project8.jpg" alt="project8" width="370" />
                     <div class="project-list__txt">
                       <p>
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
-                        для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                       </p>
                     </div>
                   </div>
@@ -211,8 +212,8 @@
                     <img class="project-list__img" src="./images/project9.jpg" alt="project9" width="370" />
                     <div class="project-list__txt">
                       <p>
-                        Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
-                        для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                        Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                        платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                       </p>
                     </div>
                   </div>
@@ -236,7 +237,11 @@
           <a href="./index.html" class="footer-address__logo">Web <span class="footer-logo-2nd-part">studio</span></a>
           <p class="footer-address__text">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="footer-address__list list">
-            <li><a href="mailto:info@example.com" class="footer-address__item footer-address__item--mbottom">info@example.com</a></li>
+            <li>
+              <a href="mailto:info@example.com" class="footer-address__item footer-address__item--mbottom"
+                >info@example.com</a
+              >
+            </li>
             <li><a href="tel:+380991111111" class="footer-address__item">+38 099 111 11 11</a></li>
           </ul>
         </address>
