--- a/portfolio.html
+++ b/portfolio.html
@@ -234,7 +234,7 @@
     <footer class="footer">
       <div class="container footer-case">
         <address class="footer-address">
-          <a href="./index.html" class="footer-address__logo">Web <span class="footer-logo-2nd-part">studio</span></a>
+          <a href="./index.html" class="footer-address__logo">Web<span class="footer-address__logo--part">studio</span></a>
           <p class="footer-address__text">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="footer-address__list list">
             <li>
