--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./dist/css/main.min.css" />
   </head>
   <body class="page">
-    <!-- Header section --> 
+    <!-- Header section -->
 
     <header class="page-header">
       <div class="flexy container">
@@ -324,7 +324,6 @@
 
       <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-
           <button data-modal-close class="cloze-hero-modal-btn">
             <svg class="md-close-btn__icon" width="11" height="11">
               <use href="./images/sprite.svg#icon-close-black"></use>
@@ -366,11 +365,23 @@
 
             <label class="callback-form-field">
               <span class="callback-form-field__feedback">Комментарий</span>
-              <textarea class="callback-form-field__textarea" name="feedback" id="feedback" rows="6" placeholder="Введите текст"> </textarea>
+              <textarea
+                class="callback-form-field__textarea"
+                name="feedback"
+                id="feedback"
+                rows="6"
+                placeholder="Введите текст"
+              ></textarea>
             </label>
 
             <label class="callback-form-license">
-              <input class="callback-form-license__check-original" type="checkbox" name="license" id="license" value="license" />
+              <input
+                class="callback-form-license__check-original"
+                type="checkbox"
+                name="license"
+                id="license"
+                value="license"
+              />
               <span class="callback-form-license__check-custom"></span>
               <span class="callback-form-license__check-txt">Соглашаюсь с рассылкой и принимаю</span>
               <a href="" class="callback-form-license__link">Условия договора</a>
@@ -379,18 +390,19 @@
             <div class="md-submit-btn-box">
               <button type="submit" class="md-submit-btn">Отправить</button>
             </div>
-
           </form>
         </div>
       </div>
     </main>
 
-    <!-- Footer section -->  
+    <!-- Footer section -->
 
     <footer class="footer">
       <div class="container footer-case">
         <address class="footer-address">
-          <a href="./index.html" class="footer-address__logo">Web<span class="footer-address__logo--part">studio</span></a>
+          <a href="./index.html" class="footer-address__logo"
+            >Web<span class="footer-address__logo--part">studio</span></a
+          >
           <p class="footer-address__text">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="footer-address__list list">
             <li>
