--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./dist/css/portfolio.min.css" />
+    <link rel="stylesheet" href="./css/portfolio.min.css" />
   </head>
   <body class="portfolio-page">
     <!-- Header section -->
@@ -234,7 +234,9 @@
     <footer class="footer">
       <div class="container footer-case">
         <address class="footer-address">
-          <a href="./index.html" class="footer-address__logo">Web<span class="footer-address__logo--part">studio</span></a>
+          <a href="./index.html" class="footer-address__logo"
+            >Web<span class="footer-address__logo--part">studio</span></a
+          >
           <p class="footer-address__text">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="footer-address__list list">
             <li>
